[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mztab_m_metabolights_integration"
version = "0.0.1"
description = "This project provides code to convert mzTab-M data to the ISA-tab format required for submissions to MetaboLights repository"
authors = [
  { name = "Nils Hoffmann" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mztab_m_metabolights_integration"]
force_sort_within_sections = true
